#71098 - Possible to mix Windows and Forms authentication.

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -998,7 +998,9 @@
     <Compile Include="Models\Systems\Output\SystemOverview.cs" />
     <Compile Include="Models\Translation2.cs" />
     <Compile Include="Models\User\CustomerUserInfo.cs" />
+    <Compile Include="Models\User\LoginResult.cs" />
     <Compile Include="Models\User\UserLoginInfo.cs" />
+    <Compile Include="Models\User\UserTimeZoneInfo.cs" />
     <Compile Include="Models\WebApi\WebApiCredentialModel.cs" />
     <Compile Include="Models\WorkflowStepModel.cs" />
     <Compile Include="Models\Users\Input\UserModule.cs" />
