--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -34,7 +34,7 @@
   <selfServiceConfigurable>
     <selfServiceUrlSetting>
       <deniedUrls>
-        <url key="0" path="/case/Index*" />
+        <!--<url key="0" path="/case/Index*" />
         <url key="1" path="/case/NewCase/*" />
         <url key="2" path="/case/UserCases*" />
         <url key="3" path="/Documents*" />
@@ -43,7 +43,7 @@
         <url key="6" path="/Help*" />
       
         <url key="8" path="/Case/SearchUserCase*" />
-        <url key="9" path="/case?*" />
+        <url key="9" path="/case?*" />-->
       </deniedUrls>
       <allowedUrls>
         <url key="7" path="/Start*" />
