#71951 - Anwser from mobile with M2T - whole mail in lognote;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<log4net debug="true">
+<log4net debug="false">
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <lockingmodel type="log4net.Appender.FileAppender+MinimalLock" />
     <param name="File" value="Logs/Debug.log" />
@@ -22,11 +22,11 @@
   </appender>
   <logger name="AppErrorLog">
     <level value="ALL" />
-    <appender-ref ref="RollingLogFileAppender" />
+    <appender-ref ref="RollingFileAppender" />
   </logger>
 
   <logger name="SessionLog">
-    <level value="WARN" />
+    <level value="ALL" />
     <appender-ref ref="SessionRollingFileAppender" />
   </logger>
   <root>
