71498 - Extended case in Mobile. Update to v5.

--- a/ExtendedCase/ExtendedCase.Web/tsconfig.json
+++ b/ExtendedCase/ExtendedCase.Web/tsconfig.json
@@ -18,6 +18,9 @@
     ],
     "baseUrl": ""
   },
+  "angularCompilerOptions": {
+    "preserveWhitespaces": false
+  },
   "compileOnSave": false,
   "buildOnSave": false,
   "exclude": [
