--- a/ExtendedCase/ExtendedCase.Web/package.json
+++ b/ExtendedCase/ExtendedCase.Web/package.json
@@ -3,8 +3,8 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "@angular/compiler-cli": "^4.4.5",
-    "@ngtools/webpack": "^1.9.3",
+    "@angular/compiler-cli": "^5.2.0",
+    "@ngtools/webpack": "^1.10.0",
     "@types/deep-equal": "^1.0.0",
     "@types/node": "^7.0.52",
     "angular2-template-loader": "^0.6.2",
@@ -31,21 +31,22 @@
     "typings": "^2.1.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1",
-    "tslib": "^1.8.1"
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@angular/animations": "^4.4.5",
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
+    "@angular-devkit/core": "0.0.29",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/platform-server": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@angular/tsc-wrapped": "^0.5.2",
-    "@angular/upgrade": "^4.4.5",
-    "angular-in-memory-web-api": "~0.2.4",
+    "@angular/upgrade": "^5.2.0",
     "angular2-moment": "^1.7.1",
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
@@ -55,11 +56,11 @@
     "iframe-resizer": "^3.5.14",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng-dynamic-component": "^1.1.0",
+    "ng-dynamic-component": "^2.3.0",
     "ngx-bootstrap": "^2.0.0-beta.6",
-    "ngx-clipboard": "^8.0.3",
+    "ngx-clipboard": "^10.0.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.19"
   },
   "scripts": {
