--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -18,7 +18,7 @@
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="localhost" />
     <add key="SmtpPort" value="25" />
-    <add key="logRequest" value="true" />
+    <add key="logRequest" value="false" />
   </appSettings>
   
   <connectionStrings>
