#72838 - Two attachment fields: New E-mail tag; Mail2Ticket support - notifications update.

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
@@ -125,6 +125,7 @@
     <Compile Include="MailTemplate\MailTemplate.vb" />
     <Compile Include="MailTemplate\MailTemplateData.vb" />
     <Compile Include="Mail\Mail.vb" />
+    <Compile Include="Mail\MailFile.vb" />
     <Compile Include="MGlobal.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
