Updated ExtendedCase to Angular v6.

--- a/ExtendedCase/ExtendedCase.Web/package.json
+++ b/ExtendedCase/ExtendedCase.Web/package.json
@@ -3,10 +3,10 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular/compiler-cli": "^6.1.0",
     "@ngtools/webpack": "^1.10.0",
     "@types/deep-equal": "^1.0.0",
-    "@types/node": "^7.0.52",
+    "@types/node": "^10.1.4",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.2",
     "copy-webpack-plugin": "^4.3.1",
@@ -27,27 +27,25 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.16.1",
     "tslint": "^5.5.8",
-    "typescript": "^2.6.2",
-    "typings": "^2.1.0",
+    "typescript": "^2.7.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "@angular-devkit/core": "0.0.29",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.0",
+    "@angular/router": "^6.1.0",
     "@angular/tsc-wrapped": "^0.5.2",
-    "@angular/upgrade": "^5.2.0",
-    "angular2-moment": "^1.7.1",
+    "@angular/upgrade": "^6.1.0",
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
     "core-js": "^2.5.1",
@@ -55,16 +53,16 @@
     "es6-shim": "^0.35.3",
     "iframe-resizer": "^3.5.14",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1",
-    "ng-dynamic-component": "^2.3.0",
-    "ngx-bootstrap": "^2.0.0-beta.6",
-    "ngx-clipboard": "^10.0.0",
+    "moment": "^2.24.0",
+    "ng-dynamic-component": "^3.0.0",
+    "ngx-bootstrap": "^3.0.0",
+    "ngx-clipboard": "^12.2.0",
+    "ngx-moment": "^3.4.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.0.0",
     "zone.js": "^0.8.19"
   },
   "scripts": {
-    "postinstall": "typings install",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "clearNpm": "npm cache clean",
     "getNpmVersion": "npm -v",
