--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -1,71 +1,70 @@
 {
-    "name": "web-mobile",
-    "version": "0.4.3",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --stats-json",
-        "build_dev-prod": "ng build --stats-json --prod --configuration=dev-prod",
-        "build_prod": "ng build --prod --configuration=production",
-        "bundle-report": "webpack-bundle-analyzer wwwroot/build/stats.json -m static",
-        "test": "ng test",
-        "lint": "ng lint",
-        "tslint": "tslint -p tsconfig.json",
-        "tslint-fix": "tslint --fix -p tsconfig.json",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^7.2.4",
-        "@angular/common": "^7.2.4",
-        "@angular/compiler": "^7.2.4",
-        "@angular/core": "^7.2.4",
-        "@angular/forms": "^7.2.4",
-        "@angular/http": "^7.2.4",
-        "@angular/platform-browser": "^7.2.4",
-        "@angular/platform-browser-dynamic": "^7.2.4",
-        "@angular/platform-server": "^7.2.4",
-        "@angular/pwa": "^0.13.0",
-        "@angular/router": "^7.2.4",
-        "@angular/service-worker": "^7.2.4",
-        "@ngx-translate/core": "^11.0.1",
-        "@ngx-translate/http-loader": "^4.0.0",
-        "core-js": "^2.6.4",
-        "file-saver": "^2.0.0",
-        "luxon": "^1.11.3",
-        "ng2-file-upload": "^1.3.0",
-        "ng2-pdf-viewer": "^5.2.3",
-        "rxjs": "^6.4.0",
-        "rxjs-compat": "^6.5.1",
-        "uuid": "^3.3.2",
-        "zone.js": "^0.8.29",
-        "@mobiscroll/angular": "file:./src/lib/mobiscroll-package/mobiscroll-angular-4.7.3.tgz"
-    },
-    "devDependencies": {
-        "@angular-builders/custom-webpack": "^7.3.1",
-        "@angular-devkit/build-angular": "^0.13.3",
-        "@angular/cli": "^7.3.3",
-        "@angular/compiler-cli": "^7.2.6",
-        "@angular/language-service": "^7.2.4",
-        "@types/file-saver": "^2.0.0",
-        "@types/jasmine": "^3.3.8",
-        "@types/jasminewd2": "~2.0.6",
-        "@types/luxon": "^1.11.1",
-        "@types/node": "^10.12.21",
-        "codelyzer": "^4.5.0",
-        "jasmine-core": "^3.3.0",
-        "jasmine-spec-reporter": "^4.2.1",
-        "karma": "^4.0.0",
-        "karma-chrome-launcher": "^2.2.0",
-        "karma-cli": "^2.0.0",
-        "karma-coverage-istanbul-reporter": "~2.0.4",
-        "karma-jasmine": "^2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
-        "protractor": "^5.4.2",
-        "ts-node": "~8.0.2",
-        "tslint": "^5.12.1",
-        "tslint-angular": "^1.1.2",
-        "typescript": "~3.2.4",
-        "webpack-bundle-analyzer": "^3.0.3"
-    }
+  "name": "web-mobile",
+  "version": "0.4.3",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --stats-json",
+    "build_dev-prod": "ng build --stats-json --prod --configuration=dev-prod",
+    "build_prod": "ng build --prod --configuration=production",
+    "bundle-report": "webpack-bundle-analyzer wwwroot/build/stats.json -m static",
+    "test": "ng test",
+    "lint": "ng lint",
+    "tslint": "tslint -p tsconfig.json",
+    "tslint-fix": "tslint --fix -p tsconfig.json",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^8.2.0",
+    "@angular/common": "^8.2.0",
+    "@angular/compiler": "^8.2.0",
+    "@angular/core": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@angular/platform-browser": "^8.2.0",
+    "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/platform-server": "^8.2.0",
+    "@angular/pwa": "^0.802.0",
+    "@angular/router": "^8.2.0",
+    "@angular/service-worker": "^8.2.0",
+    "@mobiscroll/angular": "file:./src/lib/mobiscroll-package/mobiscroll-angular-4.7.3.tgz",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "core-js": "^3.1.4",
+    "file-saver": "^2.0.2",
+    "luxon": "^1.17.2",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-pdf-viewer": "^5.3.3",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "uuid": "^3.3.2",
+    "zone.js": "^0.10.1"
+  },
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "^8.1.0",
+    "@angular-devkit/build-angular": "^0.802.0",
+    "@angular/cli": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@types/file-saver": "^2.0.0",
+    "@types/jasmine": "^3.3.8",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/luxon": "^1.11.1",
+    "@types/node": "^10.12.21",
+    "codelyzer": "^5.1.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "~8.0.2",
+    "tslint": "^5.18.0",
+    "tslint-angular": "^1.1.2",
+    "typescript": "^3.5.3",
+    "webpack-bundle-analyzer": "^3.4.1"
+  }
 }
