--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -53,6 +53,7 @@
     "components-font-awesome": "^4.7.0",
     "concat": "^1.0.3",
     "core-js": "^2.5.1",
+    "css-to-string-loader": "^0.1.3",
     "deep-equal": "^1.0.1",
     "es6-shim": "^0.35.3",
     "fs-extra": "^8.1.0",
