Angular updated to v7 and webpack to v4

--- a/ExtendedCase/ExtendedCase.WebComponent/tsconfig.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/tsconfig.json
@@ -1,3 +1,4 @@
+//remember to update tsconfig.aot.ts!
 {
   "compilerOptions": {
     "target": "es5",
@@ -26,6 +27,7 @@
   "exclude": [
     "node_modules",
     "**/*-aot.ts",
+    "**/*.aot.ts",
     "dist*"
   ]
 }
