--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -1,83 +1,89 @@
 {
-  "version": "0.0.1",
-  "name": "extended-case-component",
+  "version": "1.0.0",
+  "name": "excase",
   "private": true,
   "devDependencies": {
-    "@angular/compiler-cli": "^6.1.0",
-    "@ngtools/webpack": "^1.10.0",
-    "@types/deep-equal": "^1.0.0",
-    "@types/node": "^10.1.4",
+    "@ngtools/webpack": "^7.3.0",
+    "@types/deep-equal": "^1.0.1",
+    "@types/node": "^10.12.21",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.1.2",
+    "clean-webpack-plugin": "^1.0.0",
+    "codelyzer": "^4.5.0",
     "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.0",
+    "css-to-string-loader": "^0.1.3",
+    "cssnano": "^4.1.10",
     "del": "^2.2.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^2.2.0",
     "gulp-typescript": "^3.1.6",
     "gulp-util": "^3.0.8",
-    "html-loader": "^0.5.4",
-    "html-webpack-plugin": "^2.30.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "merge": "^1.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.5.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^1.3.3",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.16.1",
+    "raw-loader": "^1.0.0",
+    "rxjs-tslint": "^0.1.7",
+    "sass-loader": "^7.0.0",
+    "style-loader": "^0.20.0",
+    "terser-webpack-plugin": "^1.4.1",
     "tslint": "^5.5.8",
-    "typescript": "^2.7.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "tslint-angular": "^2.0.0",
+    "typescript": "^3.2.4",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.23.0",
+    "webpack-cli": "^3.0.0",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@angular-devkit/core": "0.0.29",
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/elements": "^8.2.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/platform-server": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@angular/tsc-wrapped": "^0.5.2",
-    "@angular/upgrade": "^6.1.0",
+    "@angular/animations": "^7.2.6",
+    "@angular/common": "^7.2.6",
+    "@angular/compiler": "^7.2.6",
+    "@angular/compiler-cli": "^7.2.6",
+    "@angular/core": "^7.2.6",
+    "@angular/elements": "^7.2.6",
+    "@angular/forms": "^7.2.6",
+    "@angular/http": "^7.2.6",
+    "@angular/platform-browser": "^7.2.6",
+    "@angular/platform-browser-dynamic": "^7.2.6",
+    "@angular/platform-server": "^7.2.6",
+    "@angular/router": "^7.2.6",
     "@webcomponents/custom-elements": "^1.2.4",
     "@webcomponents/shadydom": "^1.6.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
     "concat": "^1.0.3",
-    "core-js": "^2.5.1",
-    "css-to-string-loader": "^0.1.3",
+    "core-js": "^2.6.4",
     "deep-equal": "^1.0.1",
     "es6-shim": "^0.35.3",
     "fs-extra": "^8.1.0",
     "jquery": "^3.2.1",
     "moment": "^2.24.0",
-    "ng-dynamic-component": "^3.0.0",
-    "ngx-bootstrap": "^3.0.0",
+    "ng-dynamic-component": "^4.0.0",
+    "ngx-bootstrap": "^4.0.0",
     "ngx-clipboard": "^12.2.0",
     "ngx-moment": "^3.4.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.19"
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "scripts": {
+    "aot": "ngc -p tsconfig.aot.json",
     "lint": "tslint ./src/**/*.ts -t verbose",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
     "clearNpm": "npm cache clean",
     "getNpmVersion": "npm -v",
     "getNodeVersion": "node -v",
     "getTsVersion": "tsc -version",
-    "updateAngular": " npm install @angular/core@latest @angular/compiler@latest @angular/upgrade@latest @angular/common@latest  @angular/platform-browser@latest @angular/platform-browser-dynamic@latest @angular/forms@latest @angular/common/http@latest @angular/animations@latest typescript@latest --save",
+    "updateAngular": " npm install @angular/core@latest @angular/compiler@latest @angular/upgrade@latest @angular/common@latest  @angular/platform-browser@latest @angular/platform-browser-dynamic@latest @angular/forms@latest @angular/common/http@latest @angular/router@latest @angular/animations@latest typescript@latest --save",
     "updateTypescript": "npm update -g typescript",
     "installDependencies": "npm install",
-    "build-test": "gulp build-test",
-    "build-dev": "gulp build-dev"
+    "build-test": "webpack --env.mode=test",
+    "build-dev": "webpack --env.mode=dev"
   }
 }
