--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -3,12 +3,13 @@
   "name": "excase",
   "private": true,
   "devDependencies": {
-    "@ngtools/webpack": "^7.3.0",
+    "@ngtools/webpack": "^8.2.1",
     "@types/deep-equal": "^1.0.1",
-    "@types/node": "^10.12.21",
+    "@types/node": "^10.14.15",
     "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.0",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.1.0",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.0",
     "css-to-string-loader": "^0.1.3",
@@ -29,48 +30,49 @@
     "raw-loader": "^1.0.0",
     "rxjs-tslint": "^0.1.7",
     "sass-loader": "^7.0.0",
+    "stats-webpack-plugin": "^0.7.0",
     "style-loader": "^0.20.0",
     "terser-webpack-plugin": "^1.4.1",
     "tslint": "^5.5.8",
-    "tslint-angular": "^2.0.0",
-    "typescript": "^3.2.4",
+    "tslint-angular": "^3.0.2",
+    "typescript": "^3.5.3",
     "url-loader": "^1.1.1",
     "webpack": "^4.23.0",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.0.0",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.6",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^7.2.6",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/core": "^7.2.6",
-    "@angular/elements": "^7.2.6",
-    "@angular/forms": "^7.2.6",
-    "@angular/http": "^7.2.6",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/platform-server": "^7.2.6",
-    "@angular/router": "^7.2.6",
+    "@angular/animations": "^8.2.1",
+    "@angular/common": "^8.2.1",
+    "@angular/compiler": "^8.2.1",
+    "@angular/compiler-cli": "^8.2.1",
+    "@angular/core": "^8.2.1",
+    "@angular/elements": "^8.2.1",
+    "@angular/forms": "^8.2.1",
+    "@angular/platform-browser": "^8.2.1",
+    "@angular/platform-browser-dynamic": "^8.2.1",
+    "@angular/platform-server": "^8.2.1",
+    "@angular/router": "^8.2.1",
     "@webcomponents/custom-elements": "^1.2.4",
     "@webcomponents/shadydom": "^1.6.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
     "concat": "^1.0.3",
-    "core-js": "^2.6.4",
+    "core-js": "^2.4.1",
     "deep-equal": "^1.0.1",
     "es6-shim": "^0.35.3",
     "fs-extra": "^8.1.0",
     "jquery": "^3.2.1",
     "moment": "^2.24.0",
-    "ng-dynamic-component": "^4.0.0",
-    "ngx-bootstrap": "^4.0.0",
+    "ng-dynamic-component": "^5.0.0",
+    "ngx-bootstrap": "^5.1.1",
     "ngx-clipboard": "^12.2.0",
     "ngx-moment": "^3.4.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1"
   },
   "scripts": {
     "aot": "ngc -p tsconfig.aot.json",
@@ -83,6 +85,7 @@
     "updateAngular": " npm install @angular/core@latest @angular/compiler@latest @angular/upgrade@latest @angular/common@latest  @angular/platform-browser@latest @angular/platform-browser-dynamic@latest @angular/forms@latest @angular/common/http@latest @angular/router@latest @angular/animations@latest typescript@latest --save",
     "updateTypescript": "npm update -g typescript",
     "installDependencies": "npm install",
+    "stats": "webpack-bundle-analyzer dist/stats.json",
     "build-test": "webpack --env.mode=test",
     "build-dev": "webpack --env.mode=dev"
   }
