--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -67,6 +67,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.24.0",
     "ng-dynamic-component": "^5.0.0",
+    "ng-select": "^1.0.2",
     "ngx-bootstrap": "^5.1.1",
     "ngx-clipboard": "^12.2.0",
     "ngx-moment": "^3.4.0",
