ExCase webpack build  fixes.

--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -88,6 +88,7 @@
     "installDependencies": "npm install",
     "stats": "webpack-bundle-analyzer dist/stats.json",
     "build-test": "webpack --env.mode=test",
+    "build-test-local": "webpack --env.mode=dev.test",
     "build-dev": "webpack --env.mode=dev"
   }
 }
