--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -60,7 +60,7 @@
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
     "concat": "^1.0.3",
-    "core-js": "^2.4.1",
+    "core-js": "^3.2.0",
     "deep-equal": "^1.0.1",
     "es6-shim": "^0.35.3",
     "fs-extra": "^8.1.0",
@@ -89,6 +89,7 @@
     "stats": "webpack-bundle-analyzer dist/stats.json",
     "build-test": "webpack --env.mode=test",
     "build-test-local": "webpack --env.mode=dev.test",
-    "build-dev": "webpack --env.mode=dev"
+    "build-dev": "webpack --env.mode=dev",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json -m static"
   }
 }
