#71498 - Extended case in Mobile - ie fix; Updated webapi to return extended case data information;

--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Case\CaseEditInputModel.cs" />
     <Compile Include="Case\CaseEditOutputModel.cs" />
     <Compile Include="Case\CaseLockModel.cs" />
+    <Compile Include="Case\ExtendedCaseModel.cs" />
     <Compile Include="Case\Field\BaseCaseField.cs" />
     <Compile Include="Case\GetCaseFileInputModel.cs" />
     <Compile Include="Case\GetCaseInputModel.cs" />
