--- a/dhHelpdeskNG/DH.Helpdesk.LDAP-AD/DH_Helpdesk_LDAP_AD.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.LDAP-AD/DH_Helpdesk_LDAP_AD.config.template
@@ -6,14 +6,8 @@
     <add key="SyncById" value="1" />
   </appSettings>
 
-  <!-- example
   <connectionStrings>
-    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=; Password=;Network Library=dbmssocn" />
-  </connectionStrings>
-  -->
-
-  <connectionStrings>
-    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL6; Initial Catalog=Helpdesk-Dev; User Id=helpdesk-dev; Password=helpdesk-dev;Network Library=dbmssocn" />
+    <add name="Helpdesk" connectionString="Data Source=#{DatabaseServer}; Initial Catalog=#{DatabaseName}; User Id=#{DatabaseUser}; Password=#{DatabasePassword};Network Library=dbmssocn" />
   </connectionStrings>
 
   <system.diagnostics>
