[Fix] #73351 Replaced Indexing Service with Windows Search Service as it was deprecated as of Windows Server 2008. Feature toggle FILE_SEARCH_IDX_SERVICE can be activated in case of old behavior is required.
This key must be added to web.config if using Windows Search
<add key="WindowsSearchProvider" value="provider=Search.CollatorDSO.1;EXTENDED PROPERTIES='Application=Windows';"/>

Windows Search Service must be activated on the server.

Catalog must be set to file or network path.

Changed length of server and catalog field in tblSettings

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -18,6 +18,7 @@
     <add name="DSN" connectionString="Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser};Password=#{DatabasePassword};" />
   </connectionStrings>
   <appSettings>
+    <add key="WindowsSearchProvider" value="provider=Search.CollatorDSO.1;EXTENDED PROPERTIES='Application=Windows';"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
