#72837 - Two attachment fields: Log Note UI;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -93,10 +93,9 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false"/>
     <security>
-      <requestFiltering>
+        <requestFiltering allowDoubleEscaping="true" />
         <!-- for iis 7 >. 50 mb in bytes -->
         <requestLimits maxAllowedContentLength="5242880"/>
-      </requestFiltering>
     </security>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
