#71782 - Make restriction "User has permission to their own cases only" customer specific;

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -999,6 +999,7 @@
     <Compile Include="Models\Supplier\Output\SupplierOverview.cs" />
     <Compile Include="Models\Systems\Output\SystemOverview.cs" />
     <Compile Include="Models\Translation2.cs" />
+    <Compile Include="Models\User\CustomerUserForEdit.cs" />
     <Compile Include="Models\User\CustomerUserInfo.cs" />
     <Compile Include="Models\User\LoginResult.cs" />
     <Compile Include="Models\User\UserLoginInfo.cs" />
