Fixed allow double escaping in api and self service

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -34,7 +34,7 @@
 
   <system.webServer>
     <security>
-      <requestFiltering>
+	  <requestFiltering allowDoubleEscaping="true">
         <requestLimits maxAllowedContentLength="104857600" />
       </requestFiltering>
     </security>
