--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -151,7 +151,7 @@
             <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />            
         </modules>-->
     <security>
-      <requestFiltering>
+      <requestFiltering allowDoubleEscaping="true">
         <!-- for iis 7 >. 50 mb in bytes -->
         <requestLimits maxAllowedContentLength="38000000" />
       </requestFiltering>
